--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
   <link rel="stylesheet" type="text/css" href="styles/3-header.css">
   <link rel="stylesheet" type="text/css" href="styles/4-common.css">
-  <link rel="stylesheet" type="text/css" href="styles/6-filters.css">
+  <link rel="stylesheet" type="text/css" href="styles/7-filters.css">
+  <link rel="stylesheet" type="text/css" href="styles/7-places.css">
   <link rel="icon" type="image/png" href="images/icon.png">
 </head>
 
@@ -48,7 +49,6 @@
 
             <ul class="popover">
               <!-- <div class="list"> -->
-              <!-- <li class="list"> </li> -->
               <li class="list">Internet</li>
               <li class="list">TV</li>
               <li class="list">Kitchen</li>
@@ -58,6 +58,20 @@
           </div>
         </div>
         <button>Search</button>
+      </section>
+      <section class="places">
+        <h1>Places</h1>
+        <div class="place-boxes">
+          <article>
+            <h2>My home</h2>
+          </article>
+          <article>
+            <h2>Tiny house</h2>
+          </article>
+          <article>
+            <h2>A suite</h2>
+          </article>
+        </div>
       </section>
     </div>
   </main>
