--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airbnb</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #FF0000;
-            height: 60px;
-            width: 100%
-        }
-        footer {
-            background-color: #00FF00;
-            height: 60px;
-            width: 100%;
-            position: fixed;
-            bottom: 0;
-        }
-        .footer-content {
-            text-align: center;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Airbnb</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #ff0000;
+      height: 60px;
+      width: 100%;
+    }
+
+    footer {
+      background-color: #00ff00;
+      height: 60px;
+      width: 100%;
+      position: fixed;
+      bottom: 0;
+    }
+
+    .footer-content {
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-    <header></header>
-    <footer>
-        <div class="footer-content">
-            <p>Best School</p>
-        </div>
-    </footer>
+  <header></header>
+  <footer>
+    <div class="footer-content">
+      <p>Best School</p>
+    </div>
+  </footer>
 </body>
 </html>
