--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airbnb</title>
-    <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-header.css">
-    <link rel="stylesheet" type="text/css" href="styles/4-common.css">
-    <link rel="stylesheet" type="text/css" href="styles/4-filters.css">
-    <link rel="icon" type="image/png" href="images/icon.png">
-    <header>
-    </header>
-    <div class="container">
-        <section class="filters">
-            <button>Search</button>
-        </section>
-    </div>
-    <footer>
-        <div class="text-content">
-            <p>Best School</p>
-        </div>
-    </footer>
-    
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Airbnb</title>
+  <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
+  <link rel="stylesheet" type="text/css" href="styles/3-header.css">
+  <link rel="stylesheet" type="text/css" href="styles/4-common.css">
+  <link rel="stylesheet" type="text/css" href="styles/4-filters.css">
+  <link rel="icon" type="image/png" href="images/icon.png">
 </head>
+
 <body>
-    
+  <header></header>
+
+  <main>
+    <div class="container">
+      <section class="filters">
+        <button>Search</button>
+      </section>
+    </div>
+  </main>
+
+  <footer>
+    <div class="text-content">
+      <p>Best School</p>
+    </div>
+  </footer>
 </body>
 </html>
